build(docker): refactor to multi-stage Alpine build with corporate CA support
- Add multi-stage Dockerfile with dedicated db-init and runner targets
- Add custom CA bundle support for zero-trust corporate environments
- Add dedicated startup scripts (init.sh, db-init.sh) for better separation
- Split npm build script to enable offline builds without postgres dependency
- Move docker-compose.yaml to docker/ directory for better organization
- Add service dependency management with restart policies
- Reduce image sizes: webapp (423MB), db-init (1.71GB)

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -13,7 +13,8 @@
     "migrate:localhost:create-only": "env-cmd -f .env.localhost prisma migrate dev --create-only",
     "migrate:remote": "env-cmd -f .env.remote prisma migrate dev",
     "migrate:demo": "env-cmd -f .env.demo.admin prisma migrate dev",
-    "build": "prisma generate && prisma db push && next build",
+    "build": "prisma generate && next build",
+    "db:push": "prisma db push",
     "build:localhost": "env-cmd -f .env.localhost next build",
     "build:remote": "env-cmd -f .env.remote next build",
     "build:demo": "env-cmd -f .env.demo next build",
