--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,24 +1,32 @@
+name: neuronpedia
 services:
   webapp:
     image: neuronpedia-webapp:latest
     build:
       context: ..
       dockerfile: apps/webapp/Dockerfile
+      target: runner
       args:
         ENV_FILE: ${ENV_FILE:-.env.localhost}
+        CUSTOM_CA_BUNDLE: ${CUSTOM_CA_BUNDLE:-}
     ports:
       - "3000:3000"
     env_file:
       - ${ENV_FILE:-.env.localhost}
     depends_on:
-      - db-init # always loads db locally, but only uses it for .localhost env
+      db-init:
+        condition: service_completed_successfully
+
   db-init:
-    image: neuronpeda-webapp:latest
+    image: neuronpedia-db-init:latest
     build:
       context: ..
       dockerfile: apps/webapp/Dockerfile
-    command: >
-      sh -c "npm run db:migrate:deploy && npm run db:seed"
+      target: db-init
+      args:
+        ENV_FILE: ${ENV_FILE:-.env.localhost}
+        CUSTOM_CA_BUNDLE: ${CUSTOM_CA_BUNDLE:-}
+    restart: "no"
     environment:
       - POSTGRES_URL_NON_POOLING=${POSTGRES_URL_NON_POOLING}
       - POSTGRES_PRISMA_URL=${POSTGRES_PRISMA_URL}
@@ -28,6 +36,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+
   postgres:
     image: pgvector/pgvector:pg15
     healthcheck:
@@ -45,7 +54,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./apps/webapp/prisma/pgvector-init:/docker-entrypoint-initdb.d
+      - ../apps/webapp/prisma/pgvector-init:/docker-entrypoint-initdb.d
+
   inference:
     platform: linux/amd64
     image: neuronpedia-inference:latest
