build(compose): update relative paths
- All build-related paths should be relative to project root
- All runtime-related paths should relative to docker dir

--- a/docker/compose.inference.dev.yaml
+++ b/docker/compose.inference.dev.yaml
@@ -1,7 +1,7 @@
 services:
   inference:
     volumes:
-      - ./apps/inference:/app/apps/inference
+      - ../apps/inference:/app/apps/inference
     environment:
       - RELOAD=${RELOAD:-0}
     command: >
