refactor(compose): move docker-compose.autointerp.dev.yaml to docker/compose.autointerp.dev.yaml

--- a/docker/compose.autointerp.dev.yaml
+++ b/docker/compose.autointerp.dev.yaml
@@ -1,7 +1,7 @@
 services:
     autointerp:
       volumes:
-        - ./apps/autointerp:/app/apps/autointerp
+        - ../apps/autointerp:/app/apps/autointerp
       environment:
         - RELOAD=${RELOAD:-0}
       command: >
