--- a/docker/compose.hf-cache.yaml
+++ b/docker/compose.hf-cache.yaml
@@ -8,3 +8,7 @@ services:
   autointerp:
     volumes:
       - ${HOME}/.cache/huggingface/hub:/root/.cache/huggingface/hub
+  graph:
+    volumes:
+      - ${HOME}/.cache/huggingface/hub:/root/.cache/huggingface/hub
+
