--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -95,6 +95,19 @@ services:
       - SECRET=${AUTOINTERP_SERVER_SECRET}
       - SENTRY_DSN=${SENTRY_DSN_AUTOINTERP}
 
+  graph:
+    platform: linux/amd64
+    image: neuronpedia-graph:latest
+    build:
+      context: ..
+      dockerfile: apps/graph/Dockerfile
+      args:
+        BUILD_TYPE: ${BUILD_TYPE:-nocuda}
+        CUDA_VERSION: "12.1.0"
+        UBUNTU_VERSION: "22.04"
+    ports:
+      - "5004:5004"
+
 volumes:
   postgres_data:
 
