--- a/apps/graph/Dockerfile
+++ b/apps/graph/Dockerfile
@@ -49,8 +49,8 @@ RUN pip install poetry
 ENV POETRY_VIRTUALENVS_CREATE=false
 RUN poetry config virtualenvs.create false
 
-# Copy only poetry files first
-COPY apps/graph/pyproject.toml apps/graph/poetry.lock* apps/graph/
+# Copy poetry files and README.md for packaging
+COPY apps/graph/pyproject.toml apps/graph/poetry.lock* apps/graph/README.md apps/graph/
 WORKDIR /app/apps/graph
 
 # Install dependencies
