--- a/apps/graph/pyproject.toml
+++ b/apps/graph/pyproject.toml
@@ -5,7 +5,7 @@ description = "Based on Circuit Tracer by Piotrowski & Hanna. Server for generat
 authors = ["Johnny Lin <johnny@neuronpedia.org>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "neuronpedia_graph"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
