--- a/.env.localhost
+++ b/.env.localhost
@@ -2,6 +2,7 @@ POSTGRES_PRISMA_URL="postgres://postgres:postgres@postgres:5432/postgres?pgbounc
 POSTGRES_URL_NON_POOLING="postgres://postgres:postgres@postgres:5432/postgres"
 INFERENCE_SERVER_SECRET=localhost-secret
 AUTOINTERP_SERVER_SECRET=localhost-secret
+GRAPH_SERVER_SECRET=localhost-secret
 USE_LOCALHOST_INFERENCE=true
 USE_LOCALHOST_AUTOINTERP=false
 OPENAI_API_KEY=${OPENAI_API_KEY} # this is required for explanation search to work!
