--- a/docker/compose.graph.dev.yaml
+++ b/docker/compose.graph.dev.yaml
@@ -1,12 +1,8 @@
 services:
     graph:
       volumes:
-        - ../apps/graph:/app/apps/graph
+        - ./apps/graph:/app/apps/graph
       environment:
         - RELOAD=${RELOAD:-0}
       command: >
-        sh -c "if [ "$$RELOAD" = "1" ]; then
-          python -m uvicorn server:app --host 0.0.0.0 --port 5004 --workers 1 --reload;
-        else
-          python -m uvicorn server:app --host 0.0.0.0 --port 5004 --workers 1;
-        fi" 
+        sh -c "cd /app/apps/graph && python neuronpedia_graph/server.py google/gemma-2-2b" 
