--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -131,6 +131,7 @@
     "react-markdown": "^9.0.1",
     "react-markdown-toc": "^1.4.0",
     "react-plotly.js": "^2.6.0",
+    "react-scrollspy-navigation": "^2.0.6",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.0.0",
     "react-virtuoso": "^4.7.1",
