--- a/apps/graph/pyproject.toml
+++ b/apps/graph/pyproject.toml
@@ -14,9 +14,12 @@ uvicorn = {extras = ["standard"], version = ">=0.34.2"}
 pydantic = ">=2.11.4"
 torch = ">=2.0.0"
 transformers = ">=4.0.0"
-circuit-tracer = { git = "https://github.com/safety-research/circuit-tracer.git", rev = "ca8b011" } # TODO: migrate to v0.2.0
+circuit-tracer = { git = "https://github.com/safety-research/circuit-tracer.git", rev = "3976e39c07cb0bacd483c66599ed14ab97607e03" }
 python-dotenv = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[virtualenvs]
+in-project = true
