--- a/apps/graph/runpod-qwen3-4b/pyproject.toml
+++ b/apps/graph/runpod-qwen3-4b/pyproject.toml
@@ -14,12 +14,9 @@ pydantic = ">=2.11.4"
 torch = ">=2.0.0"
 runpod = ">=1.7.0"
 transformers = ">=4.0.0"
-circuit-tracer = { git = "https://github.com/safety-research/circuit-tracer.git", branch = "main" }
+circuit-tracer = { git = "https://github.com/safety-research/circuit-tracer.git", rev = "3976e39c07cb0bacd483c66599ed14ab97607e03" }
 python-dotenv = "^1.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-[virtualenvs]
-in-project = true
