--- a/apps/inference/pyproject.toml
+++ b/apps/inference/pyproject.toml
@@ -17,14 +17,17 @@ torch = [
   { platform = "linux", version = ">=1.10" }, # We can use any torch version on Linux (e.g colab)
   { platform = "!=linux", version = ">=1.10,!=2.0,!=2.1.0" }, # Pin >=2.1.1 on Apple devices due to known MPS errors on 2.1.0
 ]
-transformer-lens = {git = "https://github.com/hijohnnylin/TransformerLens.git", branch = "temp_branch_version"}
+transformer-lens = {git = "https://github.com/TransformerLensOrg/TransformerLens.git", tag = "v3.0.0a5"}
 transformers = "^4.38.1"
 einops = "^0.7.0"
 pytest = "^8.1.1"
 huggingface-hub = "^0.34.0"
 huggingface = "^0.0.1"
 pandas = "^2.2.2"
-sae-lens = "^6.6.4"
+# TODO: Add back sae-lens once we have a stable version of transformer-lens that is compatible with sae-lens
+# sae-lens requires transformer-lens < 3.0.0. To avoid compatability issues, we install sae-lens separately using pip and use the --no-deps flag (indicating don't check dependencies).
+# See the apps/inference/Makefile install-prerelease-tlens command
+# sae-lens = "^6.6.4"
 fastapi = "^0.115.6"
 uvicorn = "^0.34.0"
 sentry-sdk = {extras = ["fastapi"], version = "^2.20.0"}
