Use tlens 3.0 in ci/cd temporarily

--- a/.github/workflows/inference-tests.yml
+++ b/.github/workflows/inference-tests.yml
@@ -27,10 +27,9 @@ jobs:
       uses: snok/install-poetry@v1
       with:
         version: latest
+    # TODO: Remove install-prerelease-tlens once we have a stable version of transformer-lens that is compatible with sae-lens
     - name: Install dependencies
-      run: |
-        poetry config virtualenvs.create true
-        poetry install --with dev
+      run: make install-prerelease-tlens
     - name: Check linting
       run: poetry run ruff check .
     - name: Check formatting
