Set develop mode to false for tlens + saelens

--- a/apps/inference/pyproject.toml
+++ b/apps/inference/pyproject.toml
@@ -17,7 +17,7 @@ torch = [
   { platform = "linux", version = ">=1.10" }, # We can use any torch version on Linux (e.g colab)
   { platform = "!=linux", version = ">=1.10,!=2.0,!=2.1.0" }, # Pin >=2.1.1 on Apple devices due to known MPS errors on 2.1.0
 ]
-transformer-lens = {git = "https://github.com/TransformerLensOrg/TransformerLens.git", tag = "v3.0.0a5"}
+transformer-lens = {git = "https://github.com/TransformerLensOrg/TransformerLens.git", branch = "dev-3.x", develop = false}
 transformers = "^4.38.1"
 einops = "^0.7.0"
 pytest = "^8.1.1"
@@ -26,7 +26,7 @@ huggingface = "^0.0.1"
 pandas = "^2.2.2"
 # TODO: Add back sae-lens once we have a stable version of transformer-lens that is compatible with sae-lens
 # sae-lens requires transformer-lens < 3.0.0. To avoid compatibility issues, we utilize a fork that allows us to install sae-lens.
-sae-lens = {git = "https://github.com/shayansadeghieh/SAELens.git", branch = "update-brackets-jaxtyping"}
+sae-lens = {git = "https://github.com/shayansadeghieh/SAELens.git", branch = "update-brackets-jaxtyping", develop = false}
 fastapi = "^0.115.6"
 uvicorn = "^0.34.0"
 sentry-sdk = {extras = ["fastapi"], version = "^2.20.0"}
