--- a/.github/workflows/inference-tests.yml
+++ b/.github/workflows/inference-tests.yml
@@ -31,10 +31,10 @@ jobs:
       run: |
         poetry config virtualenvs.create true
         poetry install --with dev
-    - name: Check linting
-      run: poetry run ruff check .
-    - name: Check formatting
-      run: poetry run ruff format --check .      
+    # - name: Check linting
+    #   run: poetry run ruff check .
+    # - name: Check formatting
+    #   run: poetry run ruff format --check .      
     # - name: Type checking
     #   run: poetry run pyright .
     - name: Run tests
