--- a/apps/inference/k8s/overlays/gpu/gemma-2-2b-2/kustomization.yaml
+++ b/apps/inference/k8s/overlays/gpu/gemma-2-2b-2/kustomization.yaml
@@ -15,4 +15,4 @@ configMapGenerator:
       - HOST=0.0.0.0
       - PORT=5002
       - MAX_LOADED_SAES=500
-      - SAE_SETS=["gemmascope-mlp-16k", "gemmascope-transcoder-16k"]
+      - SAE_SETS=["gemmascope-mlp-16k"]
